fix broken layout

--- a/app/assets/stylesheets/store/shared/_media.scss
+++ b/app/assets/stylesheets/store/shared/_media.scss
@@ -43,6 +43,10 @@
     }
 
     ul#products {
+      li.product-row {
+        width: 710px;
+      }
+
       .product-image {
         a {
           img {
